// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Text/Code Empty 1`] = `
<div
  data-css-yto836=""
>
  <p
    className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
  >
    before|
    |after
  </p>
</div>
`;

exports[`Storyshots Components/Text/Code Ends Single Line 1`] = `
<div
  data-css-yto836=""
>
  <p
    className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
  >
    This is where we see 
    <code
      className="psds-text__code psds-theme--dark"
    >
      inline code
    </code>
  </p>
</div>
`;

exports[`Storyshots Components/Text/Code Lead Single Line 1`] = `
<div
  data-css-yto836=""
>
  <p
    className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
  >
    <code
      className="psds-text__code psds-theme--dark"
    >
      inline code
    </code>
     that is here
  </p>
</div>
`;

exports[`Storyshots Components/Text/Code Line Wrap 1`] = `
<div
  data-css-yto836=""
>
  <p
    className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
  >
    text at the start
    <code
      className="psds-text__code psds-theme--dark"
    >
      buy-in programmatically, or out of the loop. I'll book a meeting so we can solution this before the sprint is over get buy-in, and closing these latest prospects is like putting socks on an octopus. Knowledge is power
    </code>
    text on the end
  </p>
</div>
`;

exports[`Storyshots Components/Text/Code Maintains Whitespace 1`] = `
<div
  data-css-yto836=""
>
  <code
    className="psds-text__code psds-theme--dark"
  >
     in the middle 
  </code>
</div>
`;

exports[`Storyshots Components/Text/Code Middle Of Paragraph 1`] = `
<div
  data-css-yto836=""
>
  <p
    className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
  >
    Please advise soonest streamline data-point, and execute , price point. This is not the hill i want to die on going forward. Diversify kpis not the long pole in my tent. Synergize productive mindfulness can you send me an invite? nor high-level so back of the net vertical integration. Deliverables
     
    <code
      className="psds-text__code psds-theme--dark"
    >
      inline code
    </code>
     granularity minimize backwards overflow. Baseline locked and loaded, and locked and loaded. Get buy-in programmatically, or out of the loop. I'll book a meeting so we can solution this before the sprint is over get buy-in, and closing these latest prospects is like putting socks on an octopus. Knowledge is power bake it in but take five, punch the tree, and come back in here with a clear head.
  </p>
</div>
`;

exports[`Storyshots Components/Text/Code Standalone 1`] = `
<div
  data-css-yto836=""
>
  <code
    className="psds-text__code psds-theme--dark"
  >
    inline code
  </code>
</div>
`;

exports[`Storyshots Components/Text/Heading Basic 1`] = `
<div
  data-css-yto836=""
>
  <h1
    className="psds-text__heading psds-text__heading--size-large psds-text__heading--color-primary psds-theme--dark"
    onClick={[Function]}
  >
    Heading
  </h1>
</div>
`;

exports[`Storyshots Components/Text/Heading Class Override 1`] = `
<div
  data-css-yto836=""
>
  <h1
    className="css-1ub3o27 psds-text__heading psds-text__heading--size-large psds-text__heading--color-primary psds-theme--dark"
    onClick={[Function]}
  >
    Heading
  </h1>
</div>
`;

exports[`Storyshots Components/Text/Heading Colors 1`] = `
<div
  data-css-yto836=""
>
  <div
    data-css-1cpmtjf=""
  >
    <h1
      className="psds-text__heading psds-text__heading--size-large psds-text__heading--color-primary psds-theme--dark"
      onClick={[Function]}
    >
      primary
    </h1>
    <h1
      className="psds-text__heading psds-text__heading--size-large psds-text__heading--color-secondary psds-theme--dark"
      onClick={[Function]}
    >
      secondary
    </h1>
  </div>
</div>
`;

exports[`Storyshots Components/Text/Heading Sizes 1`] = `
<div
  data-css-yto836=""
>
  <div
    data-css-1cpmtjf=""
  >
    <h1
      className="psds-text__heading psds-text__heading--size-xXXSmall psds-text__heading--color-primary psds-theme--dark"
      onClick={[Function]}
    >
      xXXSmall
    </h1>
    <h1
      className="psds-text__heading psds-text__heading--size-xXSmall psds-text__heading--color-primary psds-theme--dark"
      onClick={[Function]}
    >
      xXSmall
    </h1>
    <h1
      className="psds-text__heading psds-text__heading--size-xSmall psds-text__heading--color-primary psds-theme--dark"
      onClick={[Function]}
    >
      xSmall
    </h1>
    <h1
      className="psds-text__heading psds-text__heading--size-small psds-text__heading--color-primary psds-theme--dark"
      onClick={[Function]}
    >
      small
    </h1>
    <h1
      className="psds-text__heading psds-text__heading--size-medium psds-text__heading--color-primary psds-theme--dark"
      onClick={[Function]}
    >
      medium
    </h1>
    <h1
      className="psds-text__heading psds-text__heading--size-large psds-text__heading--color-primary psds-theme--dark"
      onClick={[Function]}
    >
      large
    </h1>
    <h1
      className="psds-text__heading psds-text__heading--size-xLarge psds-text__heading--color-primary psds-theme--dark"
      onClick={[Function]}
    >
      xLarge
    </h1>
  </div>
</div>
`;

exports[`Storyshots Components/Text/Heading Style Override 1`] = `
<div
  data-css-yto836=""
>
  <h1
    className="psds-text__heading psds-text__heading--size-large psds-text__heading--color-primary psds-theme--dark"
    onClick={[Function]}
    style={
      Object {
        "color": "#E7558B",
      }
    }
  >
    Heading
  </h1>
</div>
`;

exports[`Storyshots Components/Text/Label Basic 1`] = `
<div
  data-css-yto836=""
>
  <span
    className="psds-text__label psds-text__label--size-medium psds-text__label--color-primary psds-theme--dark"
    onClick={[Function]}
  >
    <h1>
      Label
    </h1>
  </span>
</div>
`;

exports[`Storyshots Components/Text/Label Caps 1`] = `
<div
  data-css-yto836=""
>
  <span
    className="psds-text__label psds-text__label--size-medium psds-text__label--color-primary psds-theme--dark psds-text__label--caps"
    onClick={[Function]}
  >
    <h1>
      Label
    </h1>
  </span>
</div>
`;

exports[`Storyshots Components/Text/Label Mono 1`] = `
<div
  data-css-yto836=""
>
  <span
    className="psds-text__label psds-text__label--size-medium psds-text__label--color-primary psds-theme--dark psds-text__label--mono"
    onClick={[Function]}
  >
    <h1>
      Label
    </h1>
  </span>
</div>
`;

exports[`Storyshots Components/Text/Label Strong 1`] = `
<div
  data-css-yto836=""
>
  <span
    className="psds-text__label psds-text__label--size-medium psds-text__label--color-primary psds-theme--dark psds-text__label--strong"
    onClick={[Function]}
  >
    <h1>
      Label
    </h1>
  </span>
</div>
`;

exports[`Storyshots Components/Text/Label Strong Caps 1`] = `
<div
  data-css-yto836=""
>
  <span
    className="psds-text__label psds-text__label--size-medium psds-text__label--color-primary psds-theme--dark psds-text__label--strong psds-text__label--caps"
    onClick={[Function]}
  >
    <h1>
      Label
    </h1>
  </span>
</div>
`;

exports[`Storyshots Components/Text/List Basic 1`] = `
<div
  data-css-yto836=""
>
  <ul
    className="psds-text__list psds-theme--dark psds-text__list--size-medium psds-text__list--color-primary psds-text__list--type-default"
    onClick={[Function]}
  >
    <li>
      one
    </li>
    <li>
      two
    </li>
    <li>
      three
    </li>
    <li>
      four
    </li>
    <li>
      five
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/Text/List Sizes 1`] = `
<div
  data-css-yto836=""
>
  <div
    data-css-1cpmtjf=""
  >
    <ul
      className="psds-text__list psds-theme--dark psds-text__list--size-small psds-text__list--color-primary psds-text__list--type-default"
      onClick={[Function]}
    >
      <li>
        one
      </li>
      <li>
        two
      </li>
      <li>
        three
      </li>
      <li>
        four
      </li>
      <li>
        five
      </li>
    </ul>
    <ul
      className="psds-text__list psds-theme--dark psds-text__list--size-medium psds-text__list--color-primary psds-text__list--type-default"
      onClick={[Function]}
    >
      <li>
        one
      </li>
      <li>
        two
      </li>
      <li>
        three
      </li>
      <li>
        four
      </li>
      <li>
        five
      </li>
    </ul>
    <ul
      className="psds-text__list psds-theme--dark psds-text__list--size-large psds-text__list--color-primary psds-text__list--type-default"
      onClick={[Function]}
    >
      <li>
        one
      </li>
      <li>
        two
      </li>
      <li>
        three
      </li>
      <li>
        four
      </li>
      <li>
        five
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Components/Text/List Types 1`] = `
<div
  data-css-yto836=""
>
  <div
    data-css-1cpmtjf=""
  >
    <ul
      className="psds-text__list psds-theme--dark psds-text__list--size-medium psds-text__list--color-primary psds-text__list--type-default"
      onClick={[Function]}
    >
      <li>
        one
      </li>
      <li>
        two
      </li>
      <li>
        three
      </li>
      <li>
        four
      </li>
      <li>
        five
      </li>
    </ul>
    <ul
      className="psds-text__list psds-theme--dark psds-text__list--size-medium psds-text__list--color-primary psds-text__list--type-bulleted"
      onClick={[Function]}
    >
      <li>
        one
      </li>
      <li>
        two
      </li>
      <li>
        three
      </li>
      <li>
        four
      </li>
      <li>
        five
      </li>
    </ul>
    <ol
      className="psds-text__list psds-theme--dark psds-text__list--size-medium psds-text__list--color-primary psds-text__list--type-numbered"
      onClick={[Function]}
    >
      <li>
        one
      </li>
      <li>
        two
      </li>
      <li>
        three
      </li>
      <li>
        four
      </li>
      <li>
        five
      </li>
    </ol>
  </div>
</div>
`;

exports[`Storyshots Components/Text/P Basic 1`] = `
<div
  data-css-yto836=""
>
  <p
    className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
    onClick={[Function]}
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur aliquam pharetra arcu in commodo. Cras faucibus ex id ligula aliquam, eget porta tortor efficitur. Duis eget ultrices ligula. Pellentesque laoreet massa interdum, venenatis sem pretium, efficitur enim. Vestibulum id nisi a massa tincidunt malesuada vitae non risus. Sed eget convallis libero. Nam ac libero luctus, euismod lectus eget, cursus nibh.
  </p>
</div>
`;

exports[`Storyshots Components/Text/P Class Override 1`] = `
<div
  data-css-yto836=""
>
  <p
    className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark css-1ub3o27"
    onClick={[Function]}
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur aliquam pharetra arcu in commodo. Cras faucibus ex id ligula aliquam, eget porta tortor efficitur. Duis eget ultrices ligula. Pellentesque laoreet massa interdum, venenatis sem pretium, efficitur enim. Vestibulum id nisi a massa tincidunt malesuada vitae non risus. Sed eget convallis libero. Nam ac libero luctus, euismod lectus eget, cursus nibh.
  </p>
</div>
`;

exports[`Storyshots Components/Text/P Colors 1`] = `
<div
  data-css-yto836=""
>
  <div
    data-css-1cpmtjf=""
  >
    <p
      className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
      onClick={[Function]}
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur aliquam pharetra arcu in commodo. Cras faucibus ex id ligula aliquam, eget porta tortor efficitur. Duis eget ultrices ligula. Pellentesque laoreet massa interdum, venenatis sem pretium, efficitur enim. Vestibulum id nisi a massa tincidunt malesuada vitae non risus. Sed eget convallis libero. Nam ac libero luctus, euismod lectus eget, cursus nibh.
    </p>
    <p
      className="psds-text__p psds-text__p--size-medium psds-text__p--color-secondary psds-theme--dark"
      onClick={[Function]}
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur aliquam pharetra arcu in commodo. Cras faucibus ex id ligula aliquam, eget porta tortor efficitur. Duis eget ultrices ligula. Pellentesque laoreet massa interdum, venenatis sem pretium, efficitur enim. Vestibulum id nisi a massa tincidunt malesuada vitae non risus. Sed eget convallis libero. Nam ac libero luctus, euismod lectus eget, cursus nibh.
    </p>
  </div>
</div>
`;

exports[`Storyshots Components/Text/P Sizes 1`] = `
<div
  data-css-yto836=""
>
  <div
    data-css-1cpmtjf=""
  >
    <p
      className="psds-text__p psds-text__p--size-small psds-text__p--color-primary psds-theme--dark"
      onClick={[Function]}
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur aliquam pharetra arcu in commodo. Cras faucibus ex id ligula aliquam, eget porta tortor efficitur. Duis eget ultrices ligula. Pellentesque laoreet massa interdum, venenatis sem pretium, efficitur enim. Vestibulum id nisi a massa tincidunt malesuada vitae non risus. Sed eget convallis libero. Nam ac libero luctus, euismod lectus eget, cursus nibh.
    </p>
    <p
      className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
      onClick={[Function]}
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur aliquam pharetra arcu in commodo. Cras faucibus ex id ligula aliquam, eget porta tortor efficitur. Duis eget ultrices ligula. Pellentesque laoreet massa interdum, venenatis sem pretium, efficitur enim. Vestibulum id nisi a massa tincidunt malesuada vitae non risus. Sed eget convallis libero. Nam ac libero luctus, euismod lectus eget, cursus nibh.
    </p>
    <p
      className="psds-text__p psds-text__p--size-large psds-text__p--color-primary psds-theme--dark"
      onClick={[Function]}
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur aliquam pharetra arcu in commodo. Cras faucibus ex id ligula aliquam, eget porta tortor efficitur. Duis eget ultrices ligula. Pellentesque laoreet massa interdum, venenatis sem pretium, efficitur enim. Vestibulum id nisi a massa tincidunt malesuada vitae non risus. Sed eget convallis libero. Nam ac libero luctus, euismod lectus eget, cursus nibh.
    </p>
  </div>
</div>
`;

exports[`Storyshots Components/Text/P Style Override 1`] = `
<div
  data-css-yto836=""
>
  <p
    className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
    onClick={[Function]}
    style={
      Object {
        "color": "#E7558B",
      }
    }
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur aliquam pharetra arcu in commodo. Cras faucibus ex id ligula aliquam, eget porta tortor efficitur. Duis eget ultrices ligula. Pellentesque laoreet massa interdum, venenatis sem pretium, efficitur enim. Vestibulum id nisi a massa tincidunt malesuada vitae non risus. Sed eget convallis libero. Nam ac libero luctus, euismod lectus eget, cursus nibh.
  </p>
</div>
`;

exports[`Storyshots Components/Text/P With Em 1`] = `
<div
  data-css-yto836=""
>
  <p
    className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
    onClick={[Function]}
  >
    Cras faucibus ex id ligula aliquam, eget porta
    <em>
      this is em
    </em>
     tortor efficitur. Duis eget ultrices ligula. Pellentesque laoreet massa interdum. Vestibulum id nisi a massa
    <em>
      THIS IS EM
    </em>
     tincidunt malesuada vitae non risus. cursus nibh.
  </p>
</div>
`;
